<resources>
    <string name="app_name">CalculatorCustom</string>
    <string name="editText1">edit text</string>
    <string name="buttonName">Button</string>
    <string name="deleteButtonText">C</string>
    <string name="bracketsButtonText">( )</string>
    <string name="percentButtonText">%</string>
    <string name="divideButtonText">&#247;</string>
    <string name="button_7_text">7</string>
    <string name="button_8_text">8</string>
    <string name="button_9_text">9</string>
    <string name="multiplyButtonText">&#215;</string>
    <string name="button_4_text">4</string>
    <string name="button_5_text">5</string>
    <string name="button_6_text">6</string>
    <string name="minusButtonText">	&#8212;</string>
    <string name="button_1_text">1</string>
    <string name="button_2_text">2</string>
    <string name="button_3_text">3</string>
    <string name="plusButtonText">+</string>
    <string name="plus_minusButtonText">+/-</string>
    <string name="button_0_text">0</string>
    <string name="dotButtonText">,</string>
    <string name="equallyButtonText">=</string>
    <string name="lightTheme">Светлая тема</string>
    <string name="darkTheme">Тенмая тема</string>
    <string name="back">Вернуться</string>
    <string name="buttonSettings">Настройки</string>
</resources>