<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <EditText
        android:id="@+id/numberField"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spaceHeight"
        app:layout_constraintTop_toTopOf="parent" />
    <!--    <Space-->
    android:id="@+id/spaceTop"
    android:layout_width="match_parent"
    android:layout_height="@dimen/spaceHeight"
    app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/deleteButtonText"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/textSize"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numberField" />

    <Button
        android:id="@+id/buttonBrackets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/bracketsButtonText"
        android:textColor="@android:color/holo_green_light"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toStartOf="@id/buttonPercent"
        app:layout_constraintStart_toEndOf="@id/buttonDel"
        app:layout_constraintTop_toTopOf="@id/buttonDel" />

    <Button
        android:id="@+id/buttonPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/percentButtonText"
        android:textColor="@android:color/holo_green_light"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toStartOf="@id/buttonDivide"
        app:layout_constraintStart_toEndOf="@id/buttonBrackets"
        app:layout_constraintTop_toTopOf="@id/buttonBrackets" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/divideButtonText"
        android:textColor="@android:color/holo_green_light"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonPercent"
        app:layout_constraintTop_toTopOf="@id/buttonPercent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/button_7_text"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonDel" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/button_8_text"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toTopOf="@id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/button_9_text"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toStartOf="@id/buttonMultiply"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toTopOf="@id/button8" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/multiplyButtonText"
        android:textColor="@android:color/holo_green_light"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toTopOf="@id/button9" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/button_4_text"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/button_5_text"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintTop_toTopOf="@id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/button_6_text"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toStartOf="@id/buttonMinus"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toTopOf="@id/button5" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/minusButtonText"
        android:textColor="@android:color/holo_green_light"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toTopOf="@id/button6" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/button_1_text"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/button_2_text"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toTopOf="@id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/button_3_text"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toStartOf="@id/buttonPlus"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toTopOf="@id/button2" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/plusButtonText"
        android:textColor="@android:color/holo_green_light"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toTopOf="@id/button3" />

    <Button
        android:id="@+id/buttonPlMi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/plus_minusButtonText"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/button1" />

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/button_0_text"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toStartOf="@id/buttonDot"
        app:layout_constraintStart_toEndOf="@id/buttonPlMi"
        app:layout_constraintTop_toTopOf="@id/buttonPlMi" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/dotButtonText"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toStartOf="@id/buttonEqually"
        app:layout_constraintStart_toEndOf="@id/buttonZero"
        app:layout_constraintTop_toTopOf="@id/buttonZero" />

    <Button
        android:id="@+id/buttonEqually"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/equallyButtonText"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonDot"
        app:layout_constraintTop_toTopOf="@id/buttonDot" />


</androidx.constraintlayout.widget.ConstraintLayout>